# xcontiki

./: .gitignore  LICENSE  README.md  ceedling  cppcheck_report.txt  project.yml
.github/workflows/: main.yml  (+2 more)
src/: .gitignore  CMakeLists.txt  main.c
src/generic_platform/arch/: arch.h
src/generic_platform/arch/dev/: arch_dev.h  arch_dev_HardwareClock.c  arch_dev_HardwareClock.h
src/generic_platform/arch/xcontiki/: arch_xcontiki.h
src/xcontiki/: CMakeLists.txt  xcontiki.c  xcontiki.h
src/xcontiki/arch/: CMakeLists.txt  xcontiki_arch.h  xcontiki_arch_Clock.c  xcontiki_arch_Clock.h  xcontiki_arch_Sleepyhead.c  xcontiki_arch_Sleepyhead.h  xcontiki_arch_Watchdog.c  xcontiki_arch_build.h  xcontiki_arch_conf.h
src/xcontiki/arch/dev/: xcontiki_arch_dev.c  xcontiki_arch_dev.h  xcontiki_arch_dev_HardwareClock.c  xcontiki_arch_dev_HardwareClock.h  xcontiki_arch_dev_Watchdog.c  xcontiki_arch_dev_Watchdog.h
src/xcontiki/arch/os/: xcontiki_arch_os.h
src/xcontiki/os/: xcontiki_os.h
src/xcontiki/os/lib/: CMakeLists.txt  xcontiki_os_lib.h  xcontiki_os_lib_CircularList.c  xcontiki_os_lib_CircularList.h  xcontiki_os_lib_Ringbuf.c  xcontiki_os_lib_Ringbuf.h  xcontiki_os_lib_RingbufIndex.c  xcontiki_os_lib_RingbufIndex.h  xcontiki_os_lib_assert.c  xcontiki_os_lib_assert.h
src/xcontiki/os/sys/: CMakeLists.txt  xcontiki_os_sys.h  xcontiki_os_sys_Clock.h  xcontiki_os_sys_Etimer.c  xcontiki_os_sys_Etimer.h  xcontiki_os_sys_Etimer_priv.h  xcontiki_os_sys_Process.c  xcontiki_os_sys_Process.h  xcontiki_os_sys_Process_priv.h  xcontiki_os_sys_ProtohreadScheduler.h  xcontiki_os_sys_Protothread.h  xcontiki_os_sys_ProtothreadScheduler.c  xcontiki_os_sys_ProtothreadsScheduler.c  xcontiki_os_sys_ProtothreadsScheduler.h  xcontiki_os_sys_Timer.c  xcontiki_os_sys_Timer.h  xcontiki_os_sys_Timer_priv.h
src/xcontiki_generic_platform/arch/dev/: arch_dev_HardwareClock.c
(+57 files in other folders)
